--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "twentyfourtyeight",
+  "name": "gridWorld",
   "version": "0.0.0",
   "dependencies": {
     "angular": "1.3.0-beta.4",
@@ -9,7 +9,9 @@
     "bootstrap-sass-official": "~3.1.0",
     "angular-route": "1.3.0-beta.4",
     "angular-cookies": "1.3.0-beta.4",
-    "angular-animate": "1.3.0-beta.4"
+    "angular-animate": "1.3.0-beta.4",
+    "numbers.js": "*",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
