--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,20 @@
 {
   "name": "gridWorld",
-  "version": "0.0.0",
+  "version": "0.1.1",
   "dependencies": {
-    "angular": "1.3.0-beta.4",
+    "angular": "1.2.26",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "jquery": "~1.11.0",
     "bootstrap-sass-official": "~3.1.0",
-    "angular-route": "1.3.0-beta.4",
-    "angular-cookies": "1.3.0-beta.4",
-    "angular-animate": "1.3.0-beta.4",
+    "angular-route": "1.2.26",
+    "angular-cookies": "1.2.26",
+    "angular-animate": "1.2.26",
     "numbers.js": "*",
     "lodash": "~2.4.1"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.15",
-    "angular-scenario": "1.2.15"
+    "angular-mocks": "1.2.26",
+    "angular-scenario": "1.2.26"
   }
 }
