--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,7 @@
     "angular-cookies": "1.2.26",
     "angular-animate": "1.2.26",
     "numbers.js": "*",
-    "lodash": "~2.4.1",
-    "angular-safeapply": "~1.0.4",
-    "bignumber.js": "~1.5.0"
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.26",
