--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "numbers.js": "*",
     "lodash": "~2.4.1",
     "highcharts-ng": "~0.0.7",
-    "bootstrap-sass": "~3.0.2"
+    "bootstrap-sass": "~3.0.2",
+    "highcharts": "~4.0.4"
   },
   "devDependencies": {
     "angular-mocks": "1.2.26",
