--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-bower": "^0.16.0",
+    "grunt-bower-concat": "^0.4.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.3.0",
