--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "^0.9.0",
+    "chai": "^1.10.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-bower": "^0.16.0",
@@ -29,7 +30,8 @@
     "rc": "~0.5.0",
     "sails": "^0.10.5",
     "sails-disk": "~0.10.0",
-    "shortid": "^2.1.3"
+    "shortid": "^2.1.3",
+    "supertest-session": "0.0.6"
   },
   "scripts": {
     "start": "node app.js",
